Fix flex spacing

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ li {
 }
 section {
 	width: 100%;
-	height: 100vh;
 	padding: 0 5%;
 	display: table;
 	margin: 0;
